--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 server.port:8080
 server.servlet.context-path=/bootcamp
 
+spring.datasource.driver-class-name:org.postgresql.Driver
+spring.datasource.url:jdbc:postgresql//localhost:1000/db_bootcamp
+spring.datasource.username:postgres
+spring.datasource.password:123456
+
+spring.jpa.show-sql:true
+spring.jpa.database-platform:org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl:false
+spring.jpa.hibernate.ddl-auto:none
