--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,3 @@
-server.port=8080
 server.servlet.context-path=/bootcamp
 
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,3 +12,10 @@ spring.jpa.hibernate.ddl-auto=none
 
 application.description= Projeto criado para o bootcamp DIO - Santander
 application.version= 1.0
+
+server.ssl.key-store = classpath: tutorial.jks 
+server.ssl.key-store-type = pkcs12 
+server.ssl.key-store-password = senha 
+server.ssl.key-password = senha 
+server.ssl.key- alias = tutorial 
+server.port = 8443
