--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,9 +13,9 @@ spring.jpa.hibernate.ddl-auto=none
 application.description= Projeto criado para o bootcamp DIO - Santander
 application.version= 1.0
 
-server.ssl.key-store= classpath: tutorial.jks 
-server.ssl.key-store-type= pkcs12 
-server.ssl.key-store-password= senha 
-server.ssl.key-password= senha 
-server.ssl.key-alias= tutorial 
-server.port= 8443
+server.ssl.key-store=classpath:tutorial.jks
+server.ssl.key-store-type=pkcs12
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.key-alias=tutorial
+server.port=8443
